[metadata]
name = clickgen
version = 1.2.0
author = Kaiz Khatri
author_email = kaizmandhu@gmail.com
description = The hassle-free cursor building toolbox.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ful1e5/clickgen
project_urls =
    Bug Tracker = https://github.com/ful1e5/clickgen/issues
    Source = https://github.com/ful1e5/clickgen
    Funding = https://liberapay.com/ful1e5
    Changelog = https://github.com/ful1e5/clickgen/blob/main/CHANGELOG.md
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Graphics
    Topic :: System :: Operating System
    Topic :: Scientific/Engineering :: Image Processing
    Operating System :: OS Independent
    Typing :: Typed

keywords =
    cursor
    xcursor
    windows
    linux
    anicursorgen
    xcursorgen

[options]
packages =
    clickgen
install_requires =
    Pillow>=8.1.1
package_dir =
    = src
python_requires = >=3.8
scripts = scripts/clickgen
include_package_data = True
zip_safe = True


[options.extras_require]
testing =
    flake8>=4.0.1
    tox>=3.24.5
    pytest>=7.0.1
    pytest-cov>=3.0.0
    mypy>=0.940
    sphinx>=4.4.0
    sphinx-rtd-theme>=1.0.0
    coverage==6.3.2

[options.package_data]
clickgen = py.typed
