[metadata]
name = clickgen
version = attr: clickgen.VERSION
author = Kaiz Khatri
author_email = kaizmandhu@gmail.com
description = The hassle-free cursor building toolbox.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ful1e5/clickgen
keywords = cursor, xcursor, windows, linux, anicursorgen, xcursorgen
project_urls =
    Source = https://github.com/ful1e5/clickgen
    Download = https://pypi.org/project/clickgen/#files
    Documentation = https://clickgen.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/ful1e5/clickgen/issues
    Changelog = https://github.com/ful1e5/clickgen/blob/main/CHANGELOG.md
    Funding = https://liberapay.com/ful1e5
    Twitter = https://twitter.com/ful1e5
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Graphics
    Topic :: System :: Operating System
    Topic :: Scientific/Engineering :: Image Processing
    Operating System :: OS Independent
    Typing :: Typed

[options]
python_requires = >=3.8
include_package_data = True
zip_safe = True
packages = clickgen
install_requires =
    Pillow>=8.1.1
package_dir =
    = src

[options.package_data]
* = LICENSE, README.md
clickgen = *.pyi, py.typed, xcursorgen.so

[options.entry_points]
console_scripts =
    clickgen = clickgen.scripts.clickgen:main

[options.extras_require]
test =
    flake8>=4.0.1
    tox>=3.24.5
    mypy>=0.940
    pytest>=7.0.1
    pytest-cov>=3.0.0
    coverage==6.3.2
doc =
    sphinx>=4.4.0
    sphinx-rtd-theme>=1.0.0
