[metadata]
name = clickgen
version = attr: clickgen.__version__
author = Abdulkaiz Khatri
author_email = kaizmandhu@gmail.com
description = The hassle-free cursor building toolbox.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ful1e5/clickgen
keywords = cursor, xcursor, windows, linux
project_urls =
    Source = https://github.com/ful1e5/clickgen
    Download = https://pypi.org/project/clickgen/#files
    Bug Tracker = https://github.com/ful1e5/clickgen/issues
    Changelog = https://github.com/ful1e5/clickgen/blob/main/CHANGELOG.md
    Funding = https://github.com/sponsors/ful1e5
    Twitter = https://twitter.com/ful1e5
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Graphics
    Topic :: System :: Operating System
    Topic :: Scientific/Engineering :: Image Processing
    Operating System :: OS Independent
    Typing :: Typed

[options]
python_requires = >=3.7.5
include_package_data = True
packages =
    clickgen
    clickgen.packer
    clickgen.parser
    clickgen.scripts
    clickgen.writer
install_requires =
    Pillow>=8.1.1
    PyYaml>=6.0.1
    attrs>=15.0.0
    numpy>=1.21.6
    toml>=0.10.2
package_dir =
    = src

[options.package_data]
* = LICENSE, README.md, *.pyi
clickgen =  py.typed

[options.entry_points]
console_scripts =
    clickgen = clickgen.scripts.clickgen:main
    ctgen = clickgen.scripts.ctgen:main

[options.extras_require]
test =
    flake8>=4.0.1
    mypy>=0.982
    pytest-cov>=3.0.0
    pytest>=7.0.1
    tox>=3.25.0
build =
    build>=0.10.0
